--- a/jamie.css
+++ b/jamie.css
@@ -1,89 +1,106 @@
-div {
-	border-radius: 5px;
-}
-
-#header {
-	z-index: 1;
-	position: fixed;
-	width: 97.5%;
-	margin-top: -20px;
-	height: 60px;
-	background-color: #668284;
-	margin-bottom: 10px;
-}
-
-#name {
-	float:left;
-	margin-left: 5px;
-	padding-top: 5px;
-	font-size: 16px;
-	font-family: Verdana, sans-serif;
-	color: #ffffff;
-}
-
-#email{
-	float:right;
-	margin-right: 5px;
-	padding-top: 5px;
-	font-size: 16px;
-	font-family: Verdana, sans-serif;
-	color: #ffffff;
-}
-
-h4 {
-	margin-left: 5px;
-	margin-bottom: 15px;
-	font-family: Verdana, sans-serif;
-}
-
-.right p {
-	margin-left: 5px;
-	margin-right: 5px;
-	margin-top: -10px;
-	font-family: Garamond, serif;
-	color: #000000;
-}
-
-li {
-	list-style-type: square;
-}
-
-a:hover {
-	font-weight: bold;
-}
-
-.left {
-	position: relative;
-	float: left;
-	margin-top: 50px;
-	width: 10%;
-	height: 400px;
-	background-color: #B9D7D9;
-	margin-bottom: 10px;
-}
-
-.right {
-	position: relative;
-	float: right;
-	margin-top: 50px;
-	width: 88%;
-	height: 400px;
-	background-color: #F4EBC3;
-	margin-bottom: 10px;
-}
-
-#footer {
-	position: relative;
-	height: 50px;
-	background-color: #668284;
-	clear: both;
-	font-family: Verdana, sans-serif;
-	font-size: 14px;
-	text-align: center;
-	color: #ffffff;
-}
-
-#footer p {
-	position: relative;
-	padding-top: 15px;
-}
+*{
+    background-color:#f1f095}
+div{
+    border-radius:5px;
+    
+    height:200px;
+    width:100%;
+    background-color:yellow;
+    }
+#header{
+    position:absolute;
+    z-index:1;
+    margin-left:20px;
+    margin-right:20px;
+    height:75px;
+    background-color:#dceae9;
+    width:99%;
+    }  
+.left{
+     margin-top:85px;
+     background-color:#f6f5cb;
+    float:left;
+    margin-left:20px;
+    padding-left:15px;
+     padding-right:12px;
+    width:20%;
+    height:1050px;
+    
+    }
+.right{
+   float:right;
+   padding-top:80px;
+   padding-left:20px;
+   padding-right:85px;
+   width:63%;
+   height:1050px;
+   background-color:#f1f095;
+    
+    }    
+#footer{
+    clear:both;
+    margin-left:20px;
+    margin-right:20px;
+    height:75px;
+    background-color:#dceae9;
+    width:99%;
+    }  
+#duan{
+    float:left;
+    width:65px;
+    
+    margin-top:5px;
+    margin-right:20px;
+    margin-left:50px;
+    }   
+#header h6{
+    float:left;
+    font-size:18px;
+    margin-top:23px;
+    display:inline;
+     background-color:#dceae9;
+    
+    }   
+#shopping{
+    
+    float:right;
+    background-color:#68d5cc;
+    display:inline;
+     margin-top:23px;
+     margin-right:100px;
+    text-decoration:none;
+    border-radius:10px;
+    color:white;
+    padding:5px 10px 5px 10px ;
+    
+    }
+.right h5{
+    color:grey;}
+li{font-weight:900;
+font-size:20px}  
+.left h4{
+    background-color:#f6f5cb;
+    font-size:20px;
+    }
+.left li{
+     background-color:#f6f5cb;
+     font-size: 18px;
+     
+    }   
+ .left ol{
+     background-color:#f6f5cb;
+     font-size: 16px;
+     color:#20857d;
+    }  
+#tu{
+    float:right;
+    width:50%; 
+     margin-left:40px;
+     margin-top:10px;
+     margin-botton:10px
+    }   
+#footer p{
+   background-color:#dceae9;
+   text-align: center;
+   padding-top:25px
+    }    
