--- a/jamie.css
+++ b/jamie.css
@@ -8,8 +8,9 @@ div{
     background-color:yellow;
     }
 #header{
-    position:absolute;
+   
     z-index:1;
+     position: fixed;
     margin-left:20px;
     margin-right:20px;
     height:75px;
