--- a/jamie.css
+++ b/jamie.css
@@ -42,13 +42,12 @@ div{
     }    
 .footer{
      position: fixed;
-     float:botton;
     clear:both;
-    margin-left:20px;
-    margin-right:20px;
+    margin:20px;
+
     height:75px;
     background-color:#dceae9;
-    width:99%;
+   
     }  
 #duan{
     float:left;
