--- a/jamie.css
+++ b/jamie.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 * {
     box-sizing: border-box;
 }
@@ -96,17 +95,18 @@ main {
     width: 40px;
     height: 40px;
     box-sizing: border-box !important;
-    .icon {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        vertical-align: middle;
-        fill: currentcolor;
-        stroke: none;
-        width: 100%;
-        height: 100%;
-    }
+}
+
+.icon {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    vertical-align: middle;
+    fill: currentcolor;
+    stroke: none;
+    width: 100%;
+    height: 100%;
 }
 
 .background-container {
@@ -141,118 +141,91 @@ main {
     background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/106114/mountain-01.jpg);
     background-position: left center;
 }
-=======
-*{
-    background-color:#f1f095}
-div{
-    border-radius:5px;
-    
-    height:200px;
-    width:100%;
-    background-color:yellow;
-    }
-#header{
-   
-    z-index:1;
-     position: fixed;
-    margin-top:0;
-    margin-left:20px;
-    margin-right:20px;
-    height:75px;
-    background-color:#dceae9;
-    width:99%;
-    }  
-.left{
-      position: fixed;
-    margin-top:85px;
-     background-color:#f6f5cb;
-    float:left;
-    margin-left:20px;
-    padding-left:15px;
-     padding-right:12px;
-    width:20%;
-    height:1050px;
-    
-    }
-.right{
-   float:right;
-   padding-top:80px;
-   padding-left:20px;
-   padding-right:85px;
-   width:63%;
-   height:1050px;
-   background-color:#f1f095;
-    
-    }    
-.footer{
-     position:relative;
-    clear:both;
-    margin:20px;
 
-    height:75px;
-    background-color:#dceae9;
-   
-    }  
-#duan{
-    float:left;
-    width:65px;
-    
-    margin-top:5px;
-    margin-right:20px;
-    margin-left:50px;
-    }   
-#header h6{
-    float:left;
-    font-size:18px;
-    margin-top:23px;
-    display:inline;
-     background-color:#dceae9;
-    
-    }   
-#shopping{
-    
-    float:right;
-    background-color:#68d5cc;
-    display:inline;
-     margin-top:23px;
-     margin-right:100px;
-    text-decoration:none;
-    border-radius:10px;
-    color:white;
-    padding:5px 10px 5px 10px ;
-    
-    }
-.right h5{
-    color:grey;}
-li{font-weight:900;
-font-size:20px}  
-.left h4{
-    background-color:#f6f5cb;
-    font-size:20px;
-    }
-.left li{
-     
-    background-color:#f6f5cb;
-     font-size: 18px;
-     
-    }   
- .left ol{
-     background-color:#f6f5cb;
-     font-size: 16px;
-     color:#20857d;
-    }  
-#tu{
-    float:right;
-    width:50%; 
-     margin-left:40px;
-     margin-top:10px;
-     margin-botton:10px
-    }   
-.footer p{
- 
-       margin-botton: 10px;
-    background-color:#dceae9;
-   text-align: center;
-   padding-top:25px
-    }  
->>>>>>> origin/gh-pages
+.left {
+    position: fixed;
+    margin-top: 85px;
+    background-color: #f6f5cb;
+    float: left;
+    margin-left: 20px;
+    padding-left: 15px;
+    padding-right: 12px;
+    width: 20%;
+    height: 1050px;
+}
+
+.right {
+    float: right;
+    padding-top: 80px;
+    padding-left: 20px;
+    padding-right: 85px;
+    width: 63%;
+    height: 1050px;
+    background-color: #f1f095;
+}
+
+.footer {
+    position: relative;
+    clear: both;
+    margin: 20px;
+    height: 75px;
+    background-color: #dceae9;
+}
+
+#duan {
+    float: left;
+    width: 65px;
+    margin-top: 5px;
+    margin-right: 20px;
+    margin-left: 50px;
+}
+
+#shopping {
+    float: right;
+    background-color: #68d5cc;
+    display: inline;
+    margin-top: 23px;
+    margin-right: 100px;
+    text-decoration: none;
+    border-radius: 10px;
+    color: white;
+    padding: 5px 10px 5px 10px;
+}
+
+.right h5 {
+    color: grey;
+}
+
+li {
+    font-weight: 900;
+    font-size: 20px
+}
+
+.left h4 {
+    background-color: #f6f5cb;
+    font-size: 20px;
+}
+
+.left li {
+    background-color: #f6f5cb;
+    font-size: 18px;
+}
+
+.left ol {
+    background-color: #f6f5cb;
+    font-size: 16px;
+    color: #20857d;
+}
+
+#tu {
+    float: right;
+    width: 50%;
+    margin-left: 40px;
+    margin-top: 10px;
+}
+
+.footer p {
+    background-color: #dceae9;
+    text-align: center;
+    padding-top: 25px
+}
