--- a/jamie.css
+++ b/jamie.css
@@ -142,6 +142,43 @@ main {
     background-position: left center;
 }
 
+.img-head {
+    margin: 3px;
+    border: 1px solid #bebebe;
+    height: auto;
+    width: auto;
+    float: left;
+}
+
+.img-head .img-square {
+    margin: 3px;
+    width: 150px;
+    height: 150px;
+}
+
+.img-word {
+    font-size: 16px;
+    font-family: "BWHaasText", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #2d2d35;
+    text-align: initial;
+    display: inline-block;
+    -ms-flex-preferred-size: 32%;
+    flex-basis: 32%;
+    box-sizing: border-box;
+    vertical-align: top;
+    padding-bottom: 28px;
+    border-bottom: none;
+}
+
+a.color-line .img-head:hover {
+    border: 3px solid #c7f078;
+}
+
+a.color-line .img-word:hover {
+    background-color: #c7f078;
+    padding: 2px;
+}
+
 .left {
     position: fixed;
     margin-top: 85px;
