--- a/jamie.css
+++ b/jamie.css
@@ -1,21 +1,23 @@
+$headerHeight: 300px;
+$toolbarHeight: 64px;
 * {
     box-sizing: border-box;
 }
 
-body {
-    position: relative;
-    width: 100%;
-    min-height: 100%;
+html {
+    font-size: 62.5%;
+    line-height: 1.4;
 }
 
-body .header {
+html,
+body {
     height: 100%;
     min-height: 100%;
     font-family: Roboto, sans-serif;
 }
 
 main {
-    padding-top: 300px;
+    padding-top: $headerHeight;
     font-family: arial;
     background: #eee;
     min-height: 100%;
@@ -29,8 +31,8 @@ main {
     left: 0;
     width: 100%;
     color: #fff;
-    height: 300px;
-    box-shadow: 0 2px 5px transparent;
+    height: $headerHeight;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
 }
 
 .header-content {
@@ -40,18 +42,11 @@ main {
 }
 
 .app-toolbar {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
     flex-direction: row;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
     position: relative;
-    height: 64px;
+    height: $toolbarHeight;
     padding: 0 16px;
     pointer-events: none;
     font-size: 20px;
@@ -60,7 +55,6 @@ main {
 #large-toolbar {
     position: absolute;
     bottom: 0;
-    -webkit-transform-origin: left top;
     transform-origin: left top;
     margin-bottom: 24px;
     margin-bottom: 16px;
@@ -69,13 +63,9 @@ main {
 
 .small-title,
 .large-title {
-    -webkit-transform-origin: left top;
     transform-origin: left top;
     white-space: nowrap;
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
     flex: 1;
-    -ms-flex-preferred-size: 0.000000001px;
     flex-basis: 0.000000001px;
     overflow: hidden;
     font-weight: 400;
@@ -101,33 +91,23 @@ main {
     position: relative;
     padding: 6px;
     outline: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
     user-select: none;
     font-size: 0;
     line-height: 1;
     width: 40px;
     height: 40px;
     box-sizing: border-box !important;
-}
-
-.icon-button .icon {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    position: relative;
-    vertical-align: middle;
-    fill: currentcolor;
-    stroke: none;
-    width: 100%;
-    height: 100%;
+    .icon {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        vertical-align: middle;
+        fill: currentcolor;
+        stroke: none;
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .background-container {
@@ -161,6 +141,28 @@ main {
 #background-front {
     background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/106114/mountain-01.jpg);
     background-position: left center;
+}
+
+.card {
+    padding: 16px;
+    margin: 24px;
+    border-radius: 2px;
+    background-color: #fff;
+    color: rgba(0, 0, 0, 0.87);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+    .card-title {
+        padding: 24px 16px 8px;
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 32px;
+    }
+    p {
+        font-size: 1.6rem;
+        font-weight: 400;
+        letter-spacing: 0.010em;
+        line-height: 1.6em;
+        padding: 0 16px;
+    }
 }
 
 .img-head {
