--- a/jamie.css
+++ b/jamie.css
@@ -1,5 +1,3 @@
-$headerHeight: 300px;
-$toolbarHeight: 64px;
 * {
     box-sizing: border-box;
 }
@@ -17,7 +15,7 @@ body {
 }
 
 main {
-    padding-top: $headerHeight;
+    padding-top: 300px;
     font-family: arial;
     background: #eee;
     min-height: 100%;
@@ -31,7 +29,7 @@ main {
     left: 0;
     width: 100%;
     color: #fff;
-    height: $headerHeight;
+    height: 300px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
 }
 
@@ -46,7 +44,7 @@ main {
     flex-direction: row;
     align-items: center;
     position: relative;
-    height: $toolbarHeight;
+    height: 64pxt;
     padding: 0 16px;
     pointer-events: none;
     font-size: 20px;
@@ -97,17 +95,18 @@ main {
     width: 40px;
     height: 40px;
     box-sizing: border-box !important;
-    .icon {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        vertical-align: middle;
-        fill: currentcolor;
-        stroke: none;
-        width: 100%;
-        height: 100%;
-    }
+}
+
+.icon-button .icon {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    vertical-align: middle;
+    fill: currentcolor;
+    stroke: none;
+    width: 100%;
+    height: 100%;
 }
 
 .background-container {
@@ -150,33 +149,38 @@ main {
     background-color: #fff;
     color: rgba(0, 0, 0, 0.87);
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-    .card-title {
-        padding: 24px 16px 8px;
-        font-size: 24px;
-        font-weight: 400;
-        line-height: 32px;
-    }
-    p {
-        font-size: 1.6rem;
-        font-weight: 400;
-        letter-spacing: 0.010em;
-        line-height: 1.6em;
-        padding: 0 16px;
-    }
+}
+
+.card .card-title {
+    padding: 24px 16px 8px;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px;
+}
+
+.card p {
+    font-size: 1.6rem;
+    font-weight: 400;
+    letter-spacing: 0.010em;
+    line-height: 1.6em;
+    padding: 0 16px;
 }
 
 .img-head {
-    margin: 3px;
+    position: relative;
+    margin: 24px;
     border: 1px solid #bebebe;
-    height: auto;
+    height: 300px;
     width: auto;
     float: left;
+    border-radius: 2px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
 }
 
 .img-head .img-square {
     margin: 3px;
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 120px;
 }
 
 .img-word {
@@ -231,28 +235,8 @@ footer {
     background-color: #dceae9;
 }
 
-.pull-right {
+footer .pull-right {
     float: right!important;
-}
-
-#duan {
-    float: left;
-    width: 65px;
-    margin-top: 5px;
-    margin-right: 20px;
-    margin-left: 50px;
-}
-
-#shopping {
-    float: right;
-    background-color: #68d5cc;
-    display: inline;
-    margin-top: 23px;
-    margin-right: 100px;
-    text-decoration: none;
-    border-radius: 10px;
-    color: white;
-    padding: 5px 10px 5px 10px;
 }
 
 .right h5 {
@@ -285,13 +269,4 @@ li {
     width: 50%;
     margin-left: 40px;
     margin-top: 10px;
-}
-
-footer p {
-    background-color: #dceae9;
-    text-align: center;
-    height: 50px;
-    position: fixed;
-    bottom: 0px;
-    left: 0px;
 }
