--- a/jamie.css
+++ b/jamie.css
@@ -199,6 +199,7 @@ div.row {
 
 .img-head {
     position: relative;
+    margin: 24px;
     border: 1px solid #bebebe;
     background-color: #fff;
     height: 250px;
@@ -220,7 +221,7 @@ div.row {
     font-size: 16px;
     font-family: "BWHaasText", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #2d2d35;
-    text-align: initial;
+    text-align: center;
     display: inline-block;
     -ms-flex-preferred-size: 32%;
     flex-basis: 32%;
