--- a/jamie.css
+++ b/jamie.css
@@ -143,10 +143,13 @@ main {
     background-position: left center;
 }
 
+.mainly {
+    margin-left: 100px!important;
+    margin-right: 100px!important;
+}
+
 .card {
     padding: 16px;
-    margin-left: 100px;
-    margin-right: 100px;
     border-radius: 2px;
     background-color: #fff;
     color: rgba(0, 0, 0, 0.87);
@@ -199,7 +202,7 @@ div.row {
 
 .img-head {
     position: relative;
-    margin: 24px;
+    margin: 12px;
     border: 1px solid #bebebe;
     background-color: #fff;
     height: 250px;
