--- a/jamie.css
+++ b/jamie.css
@@ -76,13 +76,15 @@ main {
     margin-left: 14px;
     visibility: hidden;
     opacity: 0;
+    text-shadow: 2px 2px 2px #2d2d35;
 }
 
 .large-title {
     will-change: transform, opacity;
-    font-size: 56px;
+    font-size: 40px;
     font-size: 2em;
     margin-left: 64px;
+    text-shadow: 2px 2px 2px #2d2d35;
 }
 
 .icon-button {
@@ -132,20 +134,21 @@ main {
 }
 
 #background-back {
-    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/106114/mountain-02.jpg);
+    background-image: url(http://knowledge-leader.colliers.com/wp-content/uploads/2015/10/iStock_000023423671_XXXLarge-1_1026x680-1024x680.gif);
     background-position: left center;
     opacity: 0;
     visibility: hidden;
 }
 
 #background-front {
-    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/106114/mountain-01.jpg);
+    background-image: url(http://knowledge-leader.colliers.com/wp-content/uploads/2015/10/iStock_000023423671_XXXLarge-1_1026x680-1024x680.gif);
     background-position: left center;
 }
 
 .mainly {
-    margin-left: 100px!important;
-    margin-right: 100px!important;
+    margin-top: 30px;
+    margin-left: 12.5%!important;
+    margin-right: 12.5%!important;
 }
 
 .card {
@@ -202,11 +205,11 @@ div.row {
 
 .img-head {
     position: relative;
-    margin: 12px;
+    margin: 2%;
     border: 1px solid #bebebe;
     background-color: #fff;
     height: 250px;
-    width: 250px;
+    width: 183px;
     float: left;
     border-radius: 2px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
@@ -215,9 +218,9 @@ div.row {
 .img-head .img-square {
     width: 120px;
     height: 120px;
-    display: -moz-box;
-    -moz-box-pack: center;
-    -moz-box-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .img-word {
@@ -244,20 +247,23 @@ a.color-line .img-word:hover {
 }
 
 footer {
-    position: relative;
+    width: 100%;
+    height: 200px;
+    background-color: grey;
     clear: both;
-    margin: 20px;
-    height: 75px;
-    background-color: #dceae9;
+    margin-top: 10px;
 }
 
 footer .pull-right {
     float: right!important;
     border: 1px solid #12c8de;
-    background-color: #12c8de;
+    background-color: #fff;
     margin: 5px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
+    font-size: 24px;
+    text-align: center;
+    color: #12c8de
 }
 
 footer .pull-right a {
@@ -266,10 +272,5 @@ footer .pull-right a {
 
 footer .pull-right a:visited {
     text-decoration: none;
-    color: #fff;
-}
-
-footer p {
-    text-align: center;
-    color: #fff
+    color: #12c8de;
 }
