--- a/jamie.css
+++ b/jamie.css
@@ -254,23 +254,62 @@ footer {
     margin-top: 10px;
 }
 
-footer .pull-right {
-    float: right!important;
-    border: 1px solid #12c8de;
-    background-color: #fff;
-    margin: 5px;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
-    font-size: 24px;
+.container {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    box-sizing: content-box;
+    position: relative;
+    padding-left: 30px;
+    padding-right: 30px;
+    max-width: 688px;
+    font-family: "franklin-gothic-urw", Verdana, Geneva, sans-serif;
+    font-size: 16px;
+    line-height: 1.625em;
+    font-weight: 300;
+    -webkit-font-smoothing: antialiased;
+}
+
+.back-to-top a:focus {
+    outline: -webkit-focus-ring-color auto 5px;
+}
+
+.glyphicon glyphicon-menu-up {
+    vertical-align: middle;
+    padding-left: 5px;
+    display: inline-block;
+    vertical-align: top;
+    line-height: 1;
+    text-decoration: inherit;
+    text-transform: none;
+    text-rendering: optimizeLegibility;
+}
+
+a:-webkit-any-link {
+    cursor: auto;
+}
+
+.back-to-top {
+    border-top: 2px solid #e0e0e0;
+    margin-bottom: -2px;
+    margin-top: 104px;
+    padding: 13px 0;
     text-align: center;
-    color: #12c8de
+    font-family: "franklin-gothic-urw", Verdana, Geneva, sans-serif;
+    font-weight: 500;
 }
 
-footer .pull-right a {
+.glyphicon glyphicon-menu-up:before {
+    content: "\e006";
+}
+
+a.cta--secondary:link {
+    color: #606161;
     text-decoration: none;
 }
 
-footer .pull-right a:visited {
-    text-decoration: none;
-    color: #12c8de;
+a.cta--secondary:hover,
+:focus {
+    color: #3372df;
+    text-decoration: underline;
 }
