--- a/jamie.css
+++ b/jamie.css
@@ -209,9 +209,9 @@ div.row {
     border: 1px solid #bebebe;
     background-color: #fff;
     height: 250px;
-    width: 183px;
-    float: left;
+    width: 20%;
     border-radius: 2px;
+    float: left;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
 }
 
