--- a/jamie.css
+++ b/jamie.css
@@ -200,66 +200,53 @@ main {
     background-color: #15aba2;
 }
 
-div.row {
-    clear: both;
+.link {
+    margin-top: 24px;
+    margin-bottom: 24px;
 }
 
-.color-line {
+.kuang {
     position: relative;
     margin: 2%;
-    border: 1px solid #bebebe!important;
+    border: 1px solid #bebebe;
     background-color: #fff;
     height: 250px;
     width: 80%;
     border-radius: 2px;
     float: left;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2)!important;
+    text-align: center;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
 }
 
-.img-head .img-square {
+.kuang .img-square {
     width: 120px;
     height: 120px;
     display: block;
+    padding-top: 8px;
     margin-left: auto;
     margin-right: auto;
 }
 
-a.color-line h3 {
-    font-size: 12px;
+.kuang h3 {
+    font-size: 16px;
     font-family: "BWHaasText", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #2d2d35;
-    text-align: center;
     display: inline-block;
     -ms-flex-preferred-size: 32%;
     flex-basis: 32%;
     box-sizing: border-box;
     vertical-align: top;
-    padding-bottom: 28px;
+    padding-bottom: 18px;
     border-bottom: none;
+    padding: 8px;
 }
 
-a.color-line h4 {
-    font-size: 9px;
-    font-family: "BWHaasText", "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #2d2d35;
-    text-align: center;
-    display: inline-block;
-    -ms-flex-preferred-size: 32%;
-    flex-basis: 32%;
-    box-sizing: border-box;
-    vertical-align: top;
-    padding-bottom: 28px;
-    border-bottom: none;
-}
-
-a.color-line .img-head:hover {
+a.color-line .kuang:hover {
     border: 3px solid #c7f078;
 }
 
-a.color-line h3:hover,
-a.color-line h4:hover {
+.kuang h3:hover {
     background-color: #c7f078;
-    padding: 2px;
 }
 
 footer {
