--- a/jamie.css
+++ b/jamie.css
@@ -185,6 +185,9 @@ main {
     padding-bottom: 2rem;
     position: relative;
     text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     max-width: 100%;
 }
 
@@ -204,9 +207,14 @@ main {
 
 .post-categories li a:link,
 .post-categories li a:visited,
-.post-categories li a:hover {
+{
     color: white;
     text-decoration: none;
+}
+
+.post-categories li a:hover {
+    color: #ccff99;
+    text-decoration: underline;
 }
 
 .overlay-content h1 {
