--- a/jamie.css
+++ b/jamie.css
@@ -178,6 +178,7 @@ main {
     padding-left: 20px;
     padding-right: 20px;
     max-width: 720px;
+    text-align: center;
 }
 
 .overlay-content {
@@ -185,10 +186,8 @@ main {
     padding-bottom: 2rem;
     position: relative;
     text-align: center;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .post-categories {
@@ -203,6 +202,7 @@ main {
     letter-spacing: 0;
     text-transform: uppercase;
     margin-top: 0;
+    text-align: center;
 }
 
 .post-categories li a:link,
