--- a/jamie.css
+++ b/jamie.css
@@ -153,7 +153,7 @@ main {
 
 .subhead {
     background-image: url(http://www.technotechindia.com/wp-content/uploads/2016/09/video-SEO.jpg);
-    background-color: #717170;
+    background-color: #a8a9a8;
     background-blend-mode: multiply;
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -182,8 +182,8 @@ main {
 .container2 {
     margin-left: auto;
     margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 
 .overlay-content {
