--- a/jamie.css
+++ b/jamie.css
@@ -155,6 +155,7 @@ main {
     background-image: url(http://www.technotechindia.com/wp-content/uploads/2016/09/video-SEO.jpg);
     background-color: #a8a9a8;
     background-blend-mode: multiply;
+    opacity: 0.85;
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-attachment: scroll;
@@ -403,4 +404,36 @@ a.cta--secondary:hover,
 :focus {
     color: #3372df;
     text-decoration: underline;
+}
+
+.EG {
+    width: 39%;
+    height: auto;
+    margin-top: 60px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+a.view {
+    text-align: center;
+}
+
+a.view:link {
+    color: black;
+    text-decoration: none;
+}
+
+a.view:visited {
+    color: black;
+    text-decoration: none;
+}
+
+a.view:hover {
+    color: #c7f078;
+    text-decoration: underline;
+}
+
+a.view p {
+    font-size: 14px;
 }
