--- a/jamie.css
+++ b/jamie.css
@@ -359,8 +359,7 @@ hr.featurette-divider {
     margin-top: 20px;
     margin-bottom: 20px;
     border: 0;
-    border-top: 1px;
-    height: 0;
+    border-top: 1px solid #c2cfcc;
     box-sizing: content-box;
 }
 
