--- a/jamie.css
+++ b/jamie.css
@@ -257,6 +257,15 @@ main {
     margin-left: auto;
 }
 
+.SS {
+    width: 80%;
+    height: auto;
+    margin-top: 100px;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 a.view {
     text-align: center;
 }
