--- a/jamie.css
+++ b/jamie.css
@@ -520,6 +520,7 @@ a.cta--secondary:hover,
 }
 
 .txt-bold {
+    margin-top: 20%;
     display: block;
     color: #656565;
     font-size: 19px;
@@ -528,7 +529,7 @@ a.cta--secondary:hover,
 td .txt-1 {
     font-weight: bolder;
     color: black;
-    font-size: 28px;
+    font-size: 25px;
     margin-top: 40%;
     text-align: center;
 }
