--- a/jamie.css
+++ b/jamie.css
@@ -563,3 +563,14 @@ td .txt-1 {
     display: block;
     font-family: 'LeagueGothic', 'Arial Narrow', Impact, sans-serif;
 }
+
+.myname {
+    padding-top: 0;
+    float: left;
+    width: 50%;
+    font-size: 20px;
+    font-weight: 400;
+    padding: 26px 0 0;
+    line-height: 1.625em;
+    color: #fff;
+}
