--- a/jamie.css
+++ b/jamie.css
@@ -544,6 +544,7 @@ td .txt-1 {
     margin-right: auto;
     display: block;
     color: #fff;
+    margin-top: 30px;
 }
 
 .footer_tittle span {
@@ -565,12 +566,27 @@ td .txt-1 {
 }
 
 .myname {
-    padding-top: 0;
+    margin-top: 30px;
     float: left;
     width: 50%;
     font-size: 20px;
     font-weight: 400;
-    padding: 26px 0 0;
     line-height: 1.625em;
     color: #fff;
+    font-family: 'LeagueGothic', 'Arial Narrow', Impact, sans-serif;
+}
+
+.mylogo {
+    float: left;
+    width: 50%;
+    padding-left: 7.4%;
+    display: block;
+    color: #fff;
+}
+
+.logo {
+    margin: 0;
+    height: 26px;
+    width: auto;
+    display: block;
 }
