--- a/jamie.css
+++ b/jamie.css
@@ -577,16 +577,16 @@ td .txt-1 {
 }
 
 .mylogo {
+    padding-top: 0px;
     float: left;
     width: 50%;
-    padding-left: 7.4%;
+    padding-left: 10%;
     display: block;
     color: #fff;
 }
 
 .logo {
     margin: 0;
-    height: 26px;
-    width: 26px;
+    height: 70px;
     display: block;
 }
