--- a/jamie.css
+++ b/jamie.css
@@ -578,9 +578,9 @@ td .txt-1 {
 
 .mylogo {
     padding-top: 0px;
-    float: left;
+    float: right;
     width: 50%;
-    padding-left: 10%;
+    padding-left: 20%;
     display: block;
     color: #fff;
 }
