--- a/jamie.css
+++ b/jamie.css
@@ -576,19 +576,12 @@ td .txt-1 {
     font-family: 'LeagueGothic', 'Arial Narrow', Impact, sans-serif;
 }
 
-.mylogo {
-    padding-top: 0px;
-    float: right;
-    width: 50%;
-    padding-left: 20%;
-    display: block;
-    color: #fff;
-}
-
 .logo {
     margin-bottom: 20%;
     height: 70px;
     display: block;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .footer_NAME {
