--- a/jamie.css
+++ b/jamie.css
@@ -577,11 +577,13 @@ td .txt-1 {
 }
 
 .logo {
-    margin-bottom: 20%;
     height: 70px;
     display: block;
     margin-right: auto;
     margin-left: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    position: absolute;
 }
 
 .footer_NAME {
