--- a/jamie.css
+++ b/jamie.css
@@ -578,12 +578,8 @@ td .txt-1 {
 
 .logo {
     height: 70px;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    position: absolute;
+    margin-right: 50%;
+    margin-top: 15%;
 }
 
 .footer_NAME {
